5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1644_869.log
== TEST (2019-04-13 18:39:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

desconto = preco * 5%

if preco <= 200:
	mensagem = preco
else:
	mensagem = desconto
	
print (preço)
print (desconto)
-- ERROR:
File "XXXX", line 5
    desconto = preco * 5%
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:45:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco * 0.05
	
print round(preco,2)

-- ERROR:
File "XXXX", line 12
    print round(preco,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:45:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco * 0.05
	
print (round(preco,2))

-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:45:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco * 0.05
	
print (round(preco,2))

-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:46:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco * 0.05
	
print (round(preco,2))

-- EXECUTION TIME:
0.14398
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
200.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
200.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:46:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco * 0.05
	
print (round(mensagem,2))

-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:47:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco - (preco * 0.05)
	
print (round(mensagem,2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:47:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco - (preco * 0.05)
	
print (round(mensagem,2))

-- EXECUTION TIME:
0.153209
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:48:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	#mensagem = preco - (preco * 0.05)
	mensagem = preco / 0.05
	
print (round(mensagem,2))

-- OUTPUT:
4001.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

preco = float(input("Valor: "))

if preco <= 200:
	mensagem = preco
else:
	mensagem = preco - (preco * 0.05)
	
print (round(mensagem,2))

-- EXECUTION TIME:
0.136385
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
